@@ -1,3 +1,8 @@
+2004-06-10  Bruno Haible  <bruno@clisp.org>
+
+	* trace.lisp (tracer): Add max-depth slot.
+	(trace1): Implement :max-depth option.
+
 2004-05-13  Bruno Haible  <bruno@clisp.org>
 
 	* clos-class2.lisp (empty-ht): Warn if this hash table ever gets used
